--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -27,10 +27,11 @@
             <input type="hidden" name="id" value="{{id}}"/>
             <button type="submit">Delete</button>
             </form>
-        <form action="/edit" method="post" style="display: inline-block">
+        <a href="/edit?id={{id}}">Edit</a>
+        <!--<form action="/edit" method="post" style="display: inline-block">
             <input type="hidden" name="id" value="{{id}}"/>
             <button type="submit">Edit</button>
-        </form>
+        </form>-->
 
     </li>
     {{/beers}}
