--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -5,7 +5,7 @@
 {{/beer}}
 <form action="/edit-beer" method="post">
     <input type="text" name="name" placeholder="Name"/>
-    <input type="text" name="location" placeholder="Location"/>
+    <input type="text" name="location" placeholder="Brewery"/>
     <select name="rating">
         <option value="1">1</option>
         <option value="2">2</option>
