--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -22,12 +22,11 @@
 
 <ol>
     {{#beers}}
-    <li><b>{{name}}</b> - {{brewery}} - {{rating}}/5 - {{comment}}
+    <li><a href="/edit?id={{id}}"><b>{{name}}</b> - {{brewery}} - {{rating}}/5 - {{comment}}</a>
         <form action="/delete-beer" method="post" style="display: inline-block">
             <input type="hidden" name="id" value="{{id}}"/>
             <button type="submit">Delete</button>
             </form>
-        <a href="/edit?id={{id}}">Edit</a>
         <!--<form action="/edit" method="post" style="display: inline-block">
             <input type="hidden" name="id" value="{{id}}"/>
             <button type="submit">Edit</button>
