--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -2,10 +2,10 @@
 <body>
 {{#beer}}
 {{name}}, {{brewery}}, {{rating}}, {{comment}}<br>
-{{/beer}}
 <form action="/edit-beer" method="post">
+    <input type="hidden" name="id" value="{{id}}"/>
     <input type="text" name="name" placeholder="Name"/>
-    <input type="text" name="location" placeholder="Brewery"/>
+    <input type="text" name="brewery" placeholder="Brewery"/>
     <select name="rating">
         <option value="1">1</option>
         <option value="2">2</option>
@@ -13,8 +13,9 @@
         <option value="4">4</option>
         <option value="5">5</option>
     </select>
-    <input type="text" name="comments" placeholder="Comment"/>
+    <input type="text" name="comment" placeholder="Comment"/>
     <button type="submit">Submit</button>
 </form>
+{{/beer}}
 </body>
 </html>
