--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,9 +1,11 @@
 <html>
 <body>
-{{username}}
-<form action="/logout" method="post">
+Welcome, {{username}}!
+<form action="/logout" method="post" style="display: inline-block">
     <button type="submit">Logout</button>
 </form>
+Enter a beer below.<br>
+Click on a beer to make changes.<br>
 
 <form action="/create-beer" method="post">
     <input type="text" name="name" placeholder="Name"/>
@@ -19,7 +21,6 @@
     <button type="submit">Submit</button>
 </form>
 
-
 <ol>
     {{#beers}}
     <li><a href="/edit?id={{id}}"><b>{{name}}</b> - {{brewery}} - {{rating}}/5 - {{comment}}</a>
@@ -27,11 +28,6 @@
             <input type="hidden" name="id" value="{{id}}"/>
             <button type="submit">Delete</button>
             </form>
-        <!--<form action="/edit" method="post" style="display: inline-block">
-            <input type="hidden" name="id" value="{{id}}"/>
-            <button type="submit">Edit</button>
-        </form>-->
-
     </li>
     {{/beers}}
 </ol>
