--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,5 +1,7 @@
 <html>
 <body>
+Welcome to BeerTracker.<br>
+Please login.
 <form action="/login" method="post">
     <input type="text" name="username" placeholder="Username"/>
     <input type="password" name="password" placeholder="Password"/>
